<resources>
    <string name="app_name">Stopwatch App</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="active_laps">Activate laps</string>
    <string name="time">00</string>
    <string name="number_laps_text">Number laps:</string>
    <string name="lap_size_text">Lap size:</string>
    <string name="lap_current">Currently laps:</string>
    <string name="results">Summary laps:</string>
    <string name="titleTimeLaps">Summary time laps:</string>
</resources>