<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopwatchActivity">

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="00:00:00"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/start"
        android:onClick="onClickStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_view"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stop"
        android:onClick="onClickStop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClickReset"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop_button"
        app:layout_constraintVertical_bias="0.073" />

    <Switch
        android:id="@+id/controller_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_laps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.855"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_button"
        app:layout_constraintVertical_bias="0.139"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/label_number_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/number_laps_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controller_laps"
        app:layout_constraintVertical_bias="0.19" />

    <EditText
        android:id="@+id/number_laps"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/time"
        android:gravity="center"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_number_laps"
        app:layout_constraintTop_toBottomOf="@+id/controller_laps"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/label_size_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/lap_size_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_number_laps"
        app:layout_constraintVertical_bias="0.284" />

    <EditText
        android:id="@+id/hours_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_number_laps"
        app:layout_constraintTop_toBottomOf="@+id/number_laps"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/minutes_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hours_text"
        app:layout_constraintTop_toBottomOf="@+id/number_laps"
        app:layout_constraintVertical_bias="0.146" />

    <EditText
        android:id="@+id/seconds_text"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/time"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minutes_text"
        app:layout_constraintTop_toBottomOf="@+id/number_laps"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/currently_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/lap_current"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutes_text" />

    <TextView
        android:id="@+id/currently_number_laps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/currently_laps"
        app:layout_constraintTop_toBottomOf="@+id/minutes_text" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/results"
        android:onClick="onClickViewLaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/currently_number_laps"
        app:layout_constraintTop_toBottomOf="@+id/minutes_text" />

</androidx.constraintlayout.widget.ConstraintLayout>